--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
       </div>
       <div class="imagenes-nosotros">
         <div class="imagen1">
-          <img data-src="assets/img/linda.jpg" alt="modelo1" />
+          <img data-src="assets/img/lindacomp.jpeg" alt="modelo1" />
         </div>
         <div class="imagenes2">
-          <img data-src="assets/img/morena.jpg" alt="modelo2" />
-          <img data-src="assets/img/colorina.jpg" alt="modelo3" />
+          <img data-src="assets/img/morenacomp.jpeg" alt="modelo2" />
+          <img data-src="assets/img/colorinacomp.jpeg" alt="modelo3" />
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img data-src="./assets/img/corte3.jpg" class="d-block w-100" alt="corte">
+                        <img data-src="./assets/img/cortecomp.jpeg" class="d-block w-100" alt="corte">
                         <div class="carousel-caption">
                           <h5>Corte y peinado</h5>
                           <p>Cambia tu look</p>                          
@@ -135,7 +135,7 @@
                       </div>
 
                       <div class="carousel-item">
-                        <img data-src="./assets/img/alisado.jpg" class="d-block w-100" alt="alisado">
+                        <img data-src="./assets/img/alisadocomp.jpeg" class="d-block w-100" alt="alisado">
                         <div class="carousel-caption">
                           <h5>Alisado</h5>
                           <p>Siempre perfecta</p>
@@ -162,7 +162,7 @@
                       </div>
 
                       <div class="carousel-item">
-                        <img data-src="./assets/img/tintura.jpg" class="d-block w-100" alt="tintura">
+                        <img data-src="./assets/img/tinturacomp.jpeg" class="d-block w-100" alt="tintura">
                         <div class="carousel-caption">
                           <h5>Coloración</h5>
                           <p>Renueva tu look</p>
@@ -224,7 +224,7 @@
       </div>
       <div class="productos">
         <div class="producto" data-producto="shampoo">
-          <img data-src="assets/img/shampoo/shampoo1.jpeg" alt="shampoo" />
+          <img data-src="assets/img/shampoo/shampoo1comp.jpeg" alt="shampoo" />
           <h2>Naturielle cosmetics</h2>
           <p>Shampoo menta,ortiga y romero</p>
           <p>Controla la caspa y evita la caída prematura.</p>
@@ -234,7 +234,7 @@
           </div>
         </div>
         <div class="producto" data-producto="shampoo">
-          <img data-src="assets/img/shampoo/shampoo2.jpeg" alt="shampoo" />
+          <img data-src="assets/img/shampoo/shampoo2comp.jpeg" alt="shampoo" />
           <h2>Naturielle cosmetics</h2>
           <P>Shampoo mango flor de naranjo</P>
           <p>Cabello fresco y libre de grasa por más tiempo.</p>
@@ -244,7 +244,7 @@
           </div>
         </div>
         <div class="producto" data-producto="shampoo">
-          <img data-src="assets/img/shampoo/shampoo3.jpeg" alt="shampoo" />
+          <img data-src="assets/img/shampoo/shampoo3comp.jpeg" alt="shampoo" />
           <h2>Naturielle cosmetics</h2>
           <p>Shampoo leche de coco</p>
           <p>Limpia suavemente y ayuda a combatir la sequedad.</p>
@@ -254,7 +254,7 @@
           </div>
         </div>
         <div class="producto" data-producto="shampoo">
-          <img data-src="assets/img/shampoo/shampoo4.jpeg" alt="shampoo" />
+          <img data-src="assets/img/shampoo/shampoo4comp.jpeg" alt="shampoo" />
           <h2>Naturielle cosmetics</h2>
           <p>Shampoo aloe vera 500 ml.</p>
           <p>Otorga crecimiento y fuerza, libre de sodio y colorantes artificiales. </p>
@@ -264,7 +264,7 @@
           </div>
         </div>
         <div class="producto" data-producto="shampoo">
-          <img data-src="assets/img/shampoo/shampoo5.jpeg" alt="shampoo" />
+          <img data-src="assets/img/shampoo/shampoo5comp.jpeg" alt="shampoo" />
           <h2>L'oréal professionnel</h2>
           <p>Shampoo Expert Pro Longer 1500 ml.</p>
           <p>Para cabellos largos con puntas finas y partidas o abiertas.</p>
@@ -274,7 +274,7 @@
           </div>
         </div>
         <div class="producto" data-producto="shampoo">
-          <img data-src="assets/img/shampoo/shampoo6.jpg" alt="shampoo" />
+          <img data-src="assets/img/shampoo/shampoo6comp.jpeg" alt="shampoo" />
           <h2>Alter Ego Italy</h2>
           <p>Shampoo Color care 950 ml.</p>
           <p>Proporciona una limpieza suave para cabellos teñidos, tratados y decolorados.</p>
@@ -284,7 +284,7 @@
           </div>
         </div>
         <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/packs/pack1.jpeg" alt="acondicionador" />
+          <img data-src="assets/img/packs/pack1comp.jpeg" alt="acondicionador" />
           <h2>Naturielle cosmetics</h2>
           <p>Pack sh. + acond. Bamboo Aloe Vera</p>
           <p>Fuerza y crecimiento</p>
@@ -294,7 +294,7 @@
           </div>
         </div>
         <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/packs/pack2.jpeg" alt="acondicionador" />
+          <img data-src="assets/img/packs/pack2comp.jpeg" alt="acondicionador" />
           <h2>Naturielle cosmetics</h2>
           <p>Pack sh. + acond. Menta Ortiga</p>
           <p>Control caída y caspa</p>
@@ -304,7 +304,7 @@
           </div>
         </div>
         <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/packs/pack3.jpeg" alt="acondicionador" />
+          <img data-src="assets/img/packs/pack3comp.jpeg" alt="acondicionador" />
           <h2>Naturielle cosmetics</h2>
           <p>Pack Sh. + acond. Leche de Coco</p>
           <p>Humectación profunda</p>
@@ -314,7 +314,7 @@
           </div>
         </div>
         <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/packs/pack4.jpeg" alt="acondicionador" />
+          <img data-src="assets/img/packs/pack4comp.jpeg" alt="acondicionador" />
           <h2>Naturielle cosmetics</h2>
           <p>Pack Sh. + acond. Mango</p>
           <p>Controla la grasitud, deja tu pelo fresco y limpio en todo momento.</p>
@@ -324,7 +324,7 @@
           </div>
         </div>
         <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/packs/pack5.jpeg" alt="acondicionador" />
+          <img data-src="assets/img/packs/pack5comp.jpeg" alt="acondicionador" />
           <h2>Inoar</h2>
           <p>Pack Sh. + acond. Coconut 500ml.</p>
           <p>Poderoso hidratante reconstruye y fortalece.</p>
@@ -334,7 +334,7 @@
           </div>
         </div>
         <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/packs/pack6.jpeg" alt="acondicionador" />
+          <img data-src="assets/img/packs/pack6comp.jpeg" alt="acondicionador" />
           <h2>Inoar</h2>
           <p>Pack Sh. + acond. Argan oil 1 Litro.</p>
           <p>Hidratación y limpieza diaria para todo tipo de cabello. </p>
@@ -343,38 +343,8 @@
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
-        <!-- <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/packs/pack7.jpeg" alt="acondicionador" />
-          <h2>Inoar</h2>
-          <p>Pack Sh. + acond. Bombar 1 Litro.</p>
-          <p> Con activos poderosos para fortalecer, suavizar y recuperar su cabello.</p>
-          <div class="precio">
-            <p>$32.000</p>
-            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
-          </div>
-        </div>
-        <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="acondicionador" />
-          <h2>Alter Ego Italy</h2>
-          <p>Pack Sh. + acond. </p>
-          <p>Proporciona una limpieza suave para cabellos teñidos, tratados y decolorados.</p>
-          <div class="precio">
-            <p>$28.000</p>
-            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
-          </div>
-        </div>
-        <div class="producto" data-producto="acondicionador">
-          <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="acondicionador" />
-          <h2>falta un pack aqui</h2>
-          <p>Pack Sh. + acond. Leche de Coco</p>
-          <p>Humectación profunda</p>
-          <div class="precio">
-            <p>$7.000</p>
-            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
-          </div>
-        </div> -->
         <div class="producto" data-producto="crema">
-          <img data-src="assets/img/cremas/crema1.jpeg" alt="crema" />
+          <img data-src="assets/img/cremas/crema1comp.jpeg" alt="crema" />
           <h2>Mar Beauty</h2>
           <p>Máscara Matizadora Champagne 250 gr.</p>
           <p>Baja tonos no deseados, neutraliza cabellos cobrizos o anaranjados, apto para todo tipo de cabello. </p>
@@ -384,7 +354,7 @@
           </div>
         </div>
         <div class="producto" data-producto="crema">
-          <img data-src="assets/img/cremas/crema2.jpeg" alt="crema" />
+          <img data-src="assets/img/cremas/crema2comp.jpeg" alt="crema" />
           <h2>Mar Beauty</h2>
           <p>Óleo de coco</p>
           <p>Para una hidratación profunda.</p>
@@ -394,7 +364,7 @@
           </div>
         </div>
         <div class="producto" data-producto="crema">
-          <img data-src="assets/img/cremas/crema3.jpeg" alt="crema" />
+          <img data-src="assets/img/cremas/crema3comp.jpeg" alt="crema" />
           <h2>Mar Beauty</h2>
           <p>Impacto profundo</p>
           <p>Para reconstruir y reparar tu cabello.</p>
@@ -403,38 +373,8 @@
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
-        <!-- <div class="producto" data-producto="crema">
-          <img data-src="assets/img/logo-glamour-y-estilo.ico" alt="crema" />
-          <h2>aqui falta la crema4</h2>
-          <p>Impacto profundo</p>
-          <p>Máscara zero sal</p>
-          <div class="precio">
-            <p>$0</p>
-            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
-          </div>
-        </div>
         <div class="producto" data-producto="crema">
-          <img data-src="assets/img/cremas/crema5.jpeg" alt="crema" />
-          <h2>Skala expert</h2>
-          <p>Mayonesa capilar 1 kilo.</p>
-          <p>Satisface las necesidades de cabello ondulado, rizado, afro y en transición. </p>
-          <div class="precio">
-            <p>$10.000</p>
-            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
-          </div>
-        </div>
-        <div class="producto" data-producto="crema">
-          <img data-src="assets/img/cremas/crema6.jpeg" alt="crema" />
-          <h2>Skala expert</h2>
-          <p>Skala mais lisos 1 kilo.</p>
-          <p>Cabello suelto y sin frizz - para cabello natural liso o alisado</p>
-          <div class="precio">
-            <p>$10.000</p>
-            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
-          </div>
-        </div> -->
-        <div class="producto" data-producto="crema">
-          <img data-src="assets/img/cremas/crema7.jpeg" alt="crema" />
+          <img data-src="assets/img/cremas/crema4comp.jpeg" alt="crema" />
           <h2>Skala expert</h2>
           <p>Máscara de vitaminas SOS 1 kilo.</p>
           <p>Fortalecedor para el cabello, una bomba de vitaminas con un efecto sorprendente</p>
@@ -444,7 +384,7 @@
           </div>
         </div>
         <div class="producto" data-producto="crema">
-          <img data-src="assets/img/cremas/crema8.jpeg" alt="crema" />
+          <img data-src="assets/img/cremas/crema5comp.jpeg" alt="crema" />
           <h2>Skala expert</h2>
           <p>Mascarilla Divino Potinho KIDS 1 kilo.</p>
           <p>Crema de textura media. Ideal para niños (con o sin enjuague).</p>
@@ -454,7 +394,7 @@
           </div>
         </div>
         <div class="producto" data-producto="crema">
-          <img data-src="assets/img/cremas/crema9.jpeg" alt="crema" />
+          <img data-src="assets/img/cremas/crema6comp.jpeg" alt="crema" />
           <h2>Orus</h2>
           <p>Matizador violeta 500ml. </p>
           <p>Ayuda a contrarrestar tonos naranjos y amarillentos.</p>
@@ -464,7 +404,7 @@
           </div>
         </div>
         <div class="producto" data-producto="otro">
-          <img data-src="assets/img/otros/otros1.jpeg" alt="otro" />
+          <img data-src="assets/img/otros/otros1comp.jpeg" alt="otro" />
           <h2>Genérico</h2>
           <p>Gorro térmico profesional</p>
           <p>Aplica calor continuo en el cabello sin maltratarlo</p>
@@ -474,7 +414,7 @@
           </div>
         </div>
         <div class="producto" data-producto="otro">
-          <img data-src="assets/img/otros/otros2.jpeg" alt="otro" />
+          <img data-src="assets/img/otros/otros2comp.jpeg" alt="otro" />
           <h2>Rocco</h2>
           <p>Protector térmico Rocco anti frizz 375 ml.</p>
           <p>Protección contra la humedad, estática, salitre, viento y cambios en el clima..</p>
@@ -484,7 +424,7 @@
           </div>
         </div>
         <div class="producto" data-producto="otro">
-          <img data-src="assets/img/otros/otros3.jpeg" alt="otro" />
+          <img data-src="assets/img/otros/otros3comp.jpeg" alt="otro" />
           <h2>Genérico</h2>
           <p>Cepillos antifrizz</p>
           <p>Ayuda a evitar la estática que genera el frizz.</p>
@@ -493,35 +433,6 @@
             <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
           </div>
         </div>
-        <!-- <div class="producto" data-producto="otro">
-          <img data-src="assets/img/otros/otros4.jpeg" alt="otro" />
-          <h2>Mar Beauty</h2>
-          <p>Plancha Titanium profesional</p>
-          <div class="precio">
-            <p>$40.000</p>
-            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
-          </div>
-        </div>
-        <div class="producto" data-producto="otro">
-          <img data-src="assets/img/otros/otros5.jpg" alt="otro" />
-          <h2>Alter Ego Italy</h2>
-          <p>Spray termoprotector 300ml.</p>
-          <p>Protección garantizada para altas temperaturas.</p>
-          <div class="precio">
-            <p>$18.000</p>
-            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
-          </div>
-        </div>
-        <div class="producto" data-producto="otro">
-          <img data-src="assets/img/otros/otros6.jpeg" alt="otro" />
-          <h2>Victoria's Secret</h2>
-          <p>Loción original para el cuerpo 236ml</p>
-          <p>Con y sin brillo, varias fragancias</p>
-          <div class="precio">
-            <p>$13.000 (1 unidad)</p>
-            <button class="comprar-btn"><i class="fa-solid fa-cart-shopping"></i></button>
-          </div>
-        </div> -->
       </div>
     </section>
 
